# rydz

./: LICENSE  PROMPTS.md  README.md  USAGE_PATTERNS.md  pyproject.toml
src/rydz/: __init__.py  client.py  logprobs.py  utils.py
tests/: test_client.py  test_logprobs.py  test_utils.py
