[project]
name = "rydz"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "openai>=2.21.0",
]
license = "MIT"
authors = [{ name = "Maciej Obarski" }]
readme = "README.md"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/rydz"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
