[project]
name = "rydz"
version = "0.1.0"
description = "LLM-based classification via logprobs — one call, one token, full confidence scores"
requires-python = ">=3.9"
dependencies = [
    "openai>=2.21.0",
]
license = "MIT"
authors = [{ name = "Maciej Obarski" }]
readme = "README.md"
keywords = ["llm", "classification", "logprobs"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/mobarski/rydz"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "rich>=14.3.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rydz"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
